# CNTP

./: .gitignore  LICENSE  README.md
custom_transformers_packages/gsm8k_strategyqa/: pyproject.toml
custom_transformers_packages/math_truthfulqa/: pyproject.toml
custom_transformers_packages/math_truthfulqa/transformers/generation/: configuration_utils.py  logits_process.py  utils.py
custom_transformers_packages/mmvet_mathvista/: pyproject.toml
custom_transformers_packages/mmvet_mathvista/transformers/generation/: utils.py
envs/: gsm8k_strategyqa.yml  math_truthfulqa.yml  mmvet_mathvista.yml
experiments/SelfEval-Guided-Decoding/: README.md
experiments/SelfEval-Guided-Decoding/scripts/llama/: run_baseline_deepseek1.5B_Instruct_tp0.8-topp0.95-el0.01-eh1.5_strqa_seed0.sh  run_baseline_deepseek1.5B_Instruct_tp0.8-topp0.95-el0.01-eh1.5_strqa_seed1.sh  run_baseline_deepseek1.5B_Instruct_tp0.8-topp0.95-el0.01-eh1.5_strqa_seed10.sh  run_baseline_deepseek1.5B_Instruct_tp0.8-topp0.95-el0.01-eh1.5_strqa_seed11.sh  run_baseline_deepseek1.5B_Instruct_tp0.8-topp0.95-el0.01-eh1.5_strqa_seed12.sh  run_baseline_deepseek1.5B_Instruct_tp0.8-topp0.95-el0.01-eh1.5_strqa_seed13.sh  run_baseline_deepseek1.5B_Instruct_tp0.8-topp0.95-el0.01-eh1.5_strqa_seed14.sh  run_baseline_deepseek1.5B_Instruct_tp0.8-topp0.95-el0.01-eh1.5_strqa_seed15.sh  run_baseline_deepseek1.5B_Instruct_tp0.8-topp0.95-el0.01-eh1.5_strqa_seed16.sh  (+191 more)
experiments/SelfEval-Guided-Decoding/src/: generate_code_baseline_deepseek_seed.py  generate_code_baseline_deepseek_seed_beam.py  generate_code_baseline_deepseek_seed_strqa.py  generate_code_baseline_deepseek_seed_strqa_beam.py  generate_code_baseline_llama.py  generate_code_baseline_llama3.1.py  generate_code_baseline_llama3.1_beam.py  generate_code_baseline_llama3.1_bestofN.py  generate_code_baseline_llama3.1_cautious.py  generate_code_baseline_llama3.1_cautious_8gpu.py  generate_code_baseline_llama3.1_cautious_negatively_correlated.py  generate_code_baseline_llama3.1_cautious_same_num_trials.py  print_accuracy.py  print_accuracy_sc.py
experiments/VLMEvalKit/: README.md  run.py
experiments/VLMEvalKit/configs/: 3-llama3_2_vision-11b-generation-lora-decode.yaml  3-llama3_2_vision-11b-generation-lora.yaml  3-llama3_2_vision-11b-generation.yaml
experiments/VLMEvalKit/vlmeval/: config.py
experiments/open-instruct/: README.md
experiments/open-instruct/eval/: templates.py  utils.py
experiments/open-instruct/results/: print_sc.py
(+116 files in other folders)
